--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "mongodb": "^3.3.0-beta2",
-    "nodemon": "^1.19.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
